Closed Bug 619388 Opened 14 years ago Closed 14 years ago

crash [@ nsOfflineStoreCompactState::FinishCompact()]

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a2

People

(Reporter: wsmwk, Assigned: timeless)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 1 obsolete file)

crash [@ nsOfflineStoreCompactState::FinishCompact()]

not new in v3.1.7

bp-1dcc4dc0-908f-42d4-993b-31da62101214
EXCEPTION_ACCESS_VIOLATION_READ
0x0
0	thunderbird.exe	nsOfflineStoreCompactState::FinishCompact	mailnews/base/src/nsMsgFolderCompactor.cpp:1036
1	thunderbird.exe	nsOfflineStoreCompactState::StartCompacting	mailnews/base/src/nsMsgFolderCompactor.cpp:1163
2	thunderbird.exe	nsFolderCompactState::Compact	mailnews/base/src/nsMsgFolderCompactor.cpp:260
3	thunderbird.exe	nsMsgDBFolder::CompactOfflineStore	mailnews/base/util/nsMsgDBFolder.cpp:1701
4	thunderbird.exe	nsImapMailFolder::Compact	mailnews/imap/src/nsImapMailFolder.cpp:1362
5	xpcom_core.dll	NS_InvokeByIndex_P	xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
1021 nsOfflineStoreCompactState::FinishCompact()
1034     // close down the temp file stream; preparing for deleting the old folder
1035     // and its database; then rename the temp folder and database

m_fileStream is null:
1036   m_fileStream->Flush();
1037   m_fileStream->Close();
1038   m_fileStream = nsnull;
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #497945 - Flags: review?(bienvenu)
Comment on attachment 497945 [details] [diff] [review]
patch

thx, r=me if you fix the brace to use the prevailing style in the file.
Attachment #497945 - Flags: review?(bienvenu) → review+
Attachment #497945 - Attachment is obsolete: true
Checked in: http://hg.mozilla.org/comm-central/rev/4dab4f7834ed
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a2
Crash Signature: [@ nsOfflineStoreCompactState::FinishCompact()]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: