Bug 619388 - crash [@ nsOfflineStoreCompactState::FinishCompact()]; r=bienvenu